--- a/styles/style.css
+++ b/styles/style.css
@@ -17,102 +17,78 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-block-start: 102px;
-  font-family: var(--main-font, sans-serif);
+  font-family: var(--main-font-family, "Inter-Variable", "Arial", sans-serif);
   font-variation-settings: "wght" var(--normal-wght, 400);
+  background-image: var(
+    --bg-image,
+    repeating-linear-gradient(to left, #d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(#d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a)
+  );
   line-height: normal;
   color: var(--accent-color, #000);
   background-color: var(--bg-color, #fff);
-  background-image: var(--bg-image);
-  background-size: 4px;
-  background-repeat: repeat;
+  background-size: cover;
   background-attachment: fixed;
+  inline-size: 100%;
+  display: grid;
+  justify-items: center;
 }
 
 .header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  inline-size: clamp(320px, 100%, var(--max-wdth, 700px));
-  margin-block-end: 100px;
-  padding: clamp(120px, 32dvi, 136px) 0 25px;
-
-  font-family: var(--accent-font, fantasy);
+  font-family: var(
+    --accent-font-family,
+    "PressStart2P-Regular",
+    "fantasy",
+    sans-serif
+  );
   font-weight: 400;
-
-  border: 2px solid var(--accent-color);
-  background-color: var(--bg-color);
-}
-
-.header__logo {
-  font-weight: inherit;
-  font-size: clamp(3.0625rem, 2.7292rem + 1.4815vw, 4.0625rem);
-  text-transform: uppercase;
+  background: var(--bg-color, #fff);
+  border: 2px solid var(--accent-color, #000);
+  inline-size: var(--width, 320px);
+  padding-block-start: clamp(7.5rem, -12.125rem + 175vw, 8.5rem);
+  padding-block-end: 25px;
+  margin-block-end: 100px;
+  margin-block-start: 100px;
+  display: grid;
+  justify-items: center;
+  gap: 20px;
 }
 
 .header__title {
-  padding-block-start: 20px;
-
   font-weight: inherit;
-  font-size: clamp(0.875rem, 0.6875rem + 0.8333vw, 1.4375rem);
   text-transform: uppercase;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  cursor: pointer;
 }
 
-.theme-menu {
-  padding-block-start: 25px;
-  padding-inline-start: 20px;
+.header__subtitle {
+  text-transform: uppercase;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  margin-block-end: 5px;
 }
 
 .theme-menu__list {
-  display: flex;
-  flex-direction: column;
-  gap: 0.6em;
+  display: grid;
+  gap: 12px;
+  margin-inline-start: 20px;
+}
+
+.theme-menu__item {
+  font-size: 14px;
 }
 
 .theme-menu__button {
   position: relative;
-
-  font-family: inherit;
-  font-size: 14px;
-  text-transform: uppercase;
-
+  background: transparent;
   border: none;
-
+  text-transform: uppercase;
+  cursor: pointer;
   transition: opacity 0.3s ease;
 }
 
 .theme-menu__button:hover {
   opacity: 0.6;
-}
-
-.theme-menu__button:focus {
-  outline: none;
-  opacity: 0.6;
-}
-
-.theme-menu__button::after {
-  content: "";
-
-  position: absolute;
-  inset-inline-start: 0;
-  inset-block-end: -5px;
-
-  inline-size: 100%;
-  block-size: 2px;
-
-  background-color: var(--accent-color);
-  opacity: 0.6;
-
-  transform: scaleX(0);
-  transform-origin: left;
-  transition: transform 0.3s ease;
-}
-
-.theme-menu__button:focus-visible::after {
-  transform: scaleX(1);
 }
 
 .theme-menu__button:disabled {
@@ -122,56 +98,76 @@
 
 .theme-menu__button:disabled::before {
   content: "▶";
-
+  display: block;
   position: absolute;
-  inset: 0;
-  inset-inline: -20px auto;
-
+  left: -14px;
   animation: moving 0.5s infinite ease-in-out alternate;
 }
 
-.main {
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus-visible {
+  opacity: 0.6;
+  transition: opacity 0.5s;
+  outline: none;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  inset-inline-start: 0;
+  inset-block-end: -5px;
+  inline-size: 100%;
+  block-size: 2px;
+  background-color: var(--accent-color, #000);
+  opacity: 0.6;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease;
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+}
+
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 51px;
-  inline-size: clamp(320px, 100%, var(--max-wdth, 700px));
-  padding-block-end: 102px;
+  gap: 50px;
+  inline-size: var(--width, 320px);
+  padding-block-end: 50px;
 }
 
 .card {
   font-size: 18px;
-
-  border: 2px solid var(--accent-color);
-  background-color: var(--bg-color);
+  background: var(--bg-color, #fff);
+  border: 2px solid var(--accent-color, #000);
 }
 
 .card__title {
-  padding: 3px 10px;
-
+  padding: 4px 10px;
   font-size: inherit;
   font-variation-settings: "wght" var(--bold-wght, 700);
   line-height: normal;
 }
 
-.card__picture {
-  object-fit: cover;
-  object-position: center;
-
-  inline-size: 100%;
-  aspect-ratio: 1/1;
-
+.card__image {
+  position: relative;
+  display: flex;
+  margin: 0;
   border: 2px solid var(--accent-color, #000);
 }
 
-.card__content {
-  padding: 25px;
-}
-
-.card__description {
-  display: flex;
-  flex-direction: column;
-  gap: 27px;
+.card__picture {
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  block-size: 100%;
+  aspect-ratio: 1/1;
 }
 
 .paragraph {
