--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,33 +5,63 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
+.page.theme-dark {
+  --bg-color: #000;
+  --accent-color: #00cc14;
+  --card-button: #00cc14;
+
+  --normal-wght: 465;
+  --bold-wght: 700;
+
+  --bg-image: repeating-linear-gradient(
+      to left,
+      #000 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
+    linear-gradient(#007f0c 0.01%, #004306);
+
+  --heart-contour: #00cc14;
+  --label-shadow: #000;
+}
+
 .page.theme-light {
-    --normal-wght: 400;
-    --bold-wght: 700;
-    --bg-color: #FFF;
-    --accent-color: #000;
-    --bg-image: url(../svg/pattern-light.svg);
-    --heart-contour: #000;
-  }
-  
-  
-  .page.theme-dark {
-    --normal-wght: 465;
-    --bold-wght: 785;
+  --bg-color: #fff;
+  --accent-color: #000;
+  --card-button: #fff;
+
+  --bg-image: repeating-linear-gradient(
+      to left,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(#d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+  --normal-wght: 400;
+  --bold-wght: 700;
+
+  --heart-contour: #000;
+  --label-shadow: #fff;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
     --bg-color: #000;
-    --accent-color: #00CC14;
-    --bg-image: url(../svg/pattern-dark.svg);
-    --heart-contour: #00CC14;
+  --accent-color: #00cc14;
+  --card-button: #00cc14;
+
+  --normal-wght: 465;
+  --bold-wght: 700;
+
+  --bg-image: repeating-linear-gradient(
+      to left,
+      #000 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
+    linear-gradient(#007f0c 0.01%, #004306);
+
+  --heart-contour: #00cc14;
+  --label-shadow: #000;
   }
-  
-  
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --normal-wght: 465;
-      --bold-wght: 785;
-      --bg-color: #000;
-      --accent-color: #00CC14;
-      --bg-image: url(../svg/pattern-dark.svg);
-      --heart-contour: #00CC14;
-    }
-  }
+}
